# practical-microservices-code

./: .gitignore  README.md
chapters/: ConsumingServices.md  DocumentingAPIs.md  EventDrivenServices.md  Events.md  Intro.md  LoggingAndMonitoring.md  PolyglotArchitectures.md  PolyglotPersistence.md  Security.md  ServiceCommunication.md  ServiceDiscovery.md
code/: docker-compose.yaml
code/example1/: README.md
code/example1/activity-service/: README.md
code/example1/user-service/: README.md
code/example1/user-service/conf/: application.conf  routes
code/example2/: README.md  activity.rb
code/example2/activity-service/: build.sbt
code/example2/activity-service/conf/: application.conf
code/example2/activity-service/project/: build.properties
code/example2/user-service/: README.md  build.sbt
code/example2/user-service/conf/: routes
code/messaging-service/: messaging-service.cabal
code/messaging-service/.stack-work/install/x86_64-osx/lts-3.12/7.10.2/flag-cache/: amqp-0.13.0-f9daa14cf0cce22f772d66cb6f781877  clock-0.5.1-59b90d07759cd06f187be57393600c88  data-binary-ieee754-0.4.4-9c482f99c15ee5808af933e7b34aa696  messaging-service-0.1.0.0  split-0.2.2-bdc181dc0cb027cda71092df3fe3fb02  xml-1.3.14-eddf7de40d083a2361e0da21e3bbae33
code/messaging-service/src/: Main.hs
code/todo-service/: main.go
code/todo-service/todos/: repository.go
user-service/: build.sbt
user-service-rmq/: README.md  build.sbt
user-service-rmq/conf/: application.conf
user-service/app/dao/: UserSQLParser.scala
user-service/project/: build.properties
(+14 files in other folders)
