name:                messaging-service
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Owain Lewis
maintainer:          owain@owainlewis.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable messaging-service-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       amqp,
                       bytestring
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/owainlewis/practical-microservices
